config/kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: life-coach
  labels:
    name: life-coach
    app: life-coach-ai
