config/kubernetes/08-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: life-coach-api
  namespace: life-coach
spec:
  podSelector:
    matchLabels:
      app: life-coach-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8787
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: life-coach-postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: life-coach-redis
      ports:
        - protocol: TCP
          port: 6379
    # DNS
    - to: []
      ports:
        - protocol: UDP
          port: 53
